# ai_assistant

./: .gitignore  README.md  ai_assisstant.py  pyproject.toml
ai_assistant/: __init__.py  ai_assistant.py  prompts.json
ai_assistant/assistant/: __init__.py  base.py  openai_model.py
assistant/: __init__.py  base.py  chat_with_tts_no_stream.py  chat_with_tts_stream.py  tts_client.py
