[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_assistant"
version = "1.0.2"
description = "A Python-based AI assistant project"
authors = [
    { name="mofanx"}
]
requires-python = ">=3.8"
readme = "README.md"
dependencies = [
    "keyboard",
    "pygame",
    "asyncio",
    "requests",
    "openai",
    "pyclip",
    "aiohttp"
]

[project.scripts]
ai_assistant = "ai_assistant.ai_assistant:AI_Assistant"
